# marketdata

./: .gitignore  Cargo.toml  MarketData.ipynb  README.md  tick_mapping_wse.csv  tick_tables_wse.csv
python/: MarketData.ipynb  aggregator.py  data.py  filters.py  requirements.txt  rust-integration.ipynb  schedule.py  test.py
python/pythonProject/: scratch.py
python/regionConfig/: NASDAQ.py  WSE.py  base.py
sample_nasdaq_databento/mbp/: manifest.json  metadata.json  symbology.json
sample_nasdaq_databento/tbbo/: condition (1).json  manifest (1).json  metadata (1).json  symbology (1).json
src/: aggregates.rs  cmd.rs  data.rs  lib.rs  main.rs  main_aggregates.rs  main_cmd.rs  main_symbology.rs  marketdata_crate.rs  parsers.rs  paths.rs  readers.rs  symbology.rs  utils.rs  writers.rs
src/aggregates/: aggregate_base.rs  aggregate_framework.rs  schedule.rs  test_aggregates.rs
src/cmd/: promote.rs  pull.rs
src/data/: event.rs  event_header.rs  quote.rs  symbol.rs  trade.rs
src/nasdaqDownload/: main.py
src/parsers/: databento_parser.rs  parser.rs  wse_parser.rs
src/paths/: nas.rs  scratch.rs
src/polygonDownload/: downloadFunctions.py  main.py  utils.py
src/readers/: filters.rs  parquet_reader.rs
src/symbology/: symbology_service.rs
src/writers/: base_writer.rs  common.rs  parquet_writer.rs  schemas.rs
