[package]
name = "marketdata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marketdata"
path = "src/main.rs"

[[bin]]
name = "symbology"
path = "src/symbology.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "50.0.0"
parquet = "50.0.0"
chrono = "0.4.33"
databento = "0.6.0"
futures = "0.3.30"
serde_json = "1.0.113"
serde = "1.0.196"



