[package]
name = "marketdata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marketdata"
path = "src/main.rs"

[[bin]]
name = "symbology"
path = "src/main_symbology.rs"

[[bin]]
name = "aggregates"
path = "src/main_aggregates.rs"

[[bin]]
name = "cmd"
path = "src/main_cmd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "50.0.0"
parquet = "50.0.0"
chrono = "0.4.33"
databento = "0.6.0"
futures = "0.3.30"
serde_json = "1.0.113"
serde = "1.0.196"
tokio = { version = "0.2.22", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
simple_logger = "4.3.3"
log = "0.4.20"
heapless = "0.8.0"
pyo3 = "0.20.0"
pyo3-polars = "0.12.0"
polars = "0.38.1"


[profile.release-with-debug]
inherits = "release"
debug = true
